# washing-machine

./: CMakeLists.txt  README.md  lwipopts.h  washing-machine.c  wm.pio
ressources/: liason serie .txt
